src/test/run-pass/while-flow-graph.rs


fn main() { let int x = 10; while (x == 10 && x == 11) { auto y = 0xf00; } }